css/main.css
body{
    background-color: rgba(249, 245, 245, 0.848);   
    margin: 0; 
    width: 100%;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}
header {
    height: 400px;
    background-image: url('../images/top-banner-2.png');
    background-size: cover; /* Makes the image cover the entire element */
    background-repeat:no-repeat; 
    background-position: center; 
    background-size: 100% auto;
    /* border-bottom:10px #1A1A3C solid; */
    /* box-shadow: 0px 10px 10px rgba(186, 167, 235, 0.5);  */
    z-index: -1; /* Place it behind the image */
    
}

p{
    color:rgb(26, 22, 22);
    font-family:  'Roboto Slab';    
}

.top-bar{
    position:fixed; 
    display: block;
    width: 100%; 
    padding: 0;
    margin: 0;  
    float: left; 
    transition: background-color 1.3s ease;  
    z-index: 1000; /* Adjust the value as needed */

}

.container{ 
    width: 90%;    
    /* transition: height 1s ease;  */
    padding-top: 0;
    padding-left: 5% ;
    padding-bottom: 0; 
    padding-right: 5%; 

    /* transition: height 1s, background-color 2.5s;
    transition-timing-function:ease; */
}

 

.toggle-button {
    display: none;
    flex-direction: column;
    cursor: pointer;
    float: right;
    padding: 20px;

}

.bar {
    width: 25px;
    height: 3px;
    background-color: white;
    margin: 3px 0;
}

.scroll-up{
    /* background-color: #1A1A3C; */
    background-color: #2B104E;
    color: white;      
}

.logo{
    float: left; 
    padding: 12px 10px 10px 10px;
    margin: 0px;
 
}

.logo img{
    float: left;  
    height: 35px;
    margin-right: 10px;
    border: 2px solid white; 
 
}

.logo a {
    text-decoration: none;
    font-weight: bold;
    font-size: 2em;
    /* color: #1A1A3C;  */
    color: white; 

}
   

.top-nav{  
    margin: 0;
    float: inline-end;   
}


.nav-links {
    list-style-type:none;
    padding-inline-start: 0px;
    list-style: none; 
    display: flex;
    gap: 20px;
    float: right;
    /* padding-left:40%; */ 
    padding: 8px;
 
 }

 
.top-nav ul li{ 
    text-decoration: none;
    list-style-type: circle; 
    display: inline;

}
.top-nav li a{
    text-decoration: none; 
    color: white;
    text-transform: uppercase;
    font-weight: bold;
    padding: 10px;
 }

.active-link{ 
    background-color: red; 
}


.top-nav li a:hover{ 
    background-color:#1A1A3C; 
}

.top-title{
    width: auto;
    height: 100px;
    padding: 50px;
    color: aliceblue;
    padding-top: 150px; 
    text-align: center;
    /* background-color: red;  */
}
.top-title p{ 
    color: aliceblue; 
    /* background-color: red;  */
}

main{
    width: 100%;
    margin-top: 15px;
    height: 300px auto;
    /* padding: 30px; */
    text-align: center;   
    display: block;
    /* transition: margin-top 0.3s ease-in-out; */

}
.about { 
    height: 500px auto;
    padding: 20px;   
    display: inline-block; 
    width: 70% ;  
    margin-top: 10px;
    /* border-radius: 10px; */
    box-shadow: 2px 5px  10px 1px rgba(186, 167, 235, 0.5); /* Actual box shadow */

}


.about img{
    border-radius: 30px;
    height: 300px ; 

}

.passion {
    width: auto;
    padding: 30px 30px 50px 30px;
    margin-top: 20px;
    display: inline-block;
    /* background-color: rgb(239, 244, 244); */
    background-color: #d9d3d3;
}

.passion-list-container{
    width: 80%;
    /* display: inline-block; */
    /* align-items: center; */
    display: inline-block;
    /* background-color: red; */
}

.passion-list{
    
    /* float: left; */
    display: inline-block;
    width: 30%;
    background-color: white;
    margin: 5px;
    padding: 7px;
}

.passion-title{
    padding-top: 10px;  
    padding-bottom: 10px;
}

.experience{
    padding: 20px;
    text-align: center;
    display: inline-block; 
}

.experience-list{ 
    display: inline-block;  
    padding: 10px; 
    transition: filter 0.3s ease-in-out;
} 

.experience-list img{ 

    height: 150px;
    width: auto; 
    transition: filter 0.3s ease-in-out;
    filter: grayscale(100%); 
    display: inline;
  /* Initial grayscale effect */
}

.experience-list:hover img {
    filter: grayscale(0%); 
    /* Reverts the grayscale effect */
}

/* Optional: If you want to add a fade effect to the color transition */
.experience-list img {
    opacity: 1;
    transition: opacity 0.3s ease-in-out, filter 0.3s ease-in-out;
}

.experience-list:hover img {
    opacity: 0.7;
} 

.contact{
    justify-content: center;
    padding: 50px 0px 50px 0px;
    height: 300px;
    background-color:#F0F0F0;
    
}
.contact p {
    /* width: 30px; */
    text-align: center;
    padding: 0px 20px 20px 20px;
}
.contact a{
    text-decoration: none;
    color: black;
    border: 2px solid #2B104E ;
    padding: 10px 10px 10px 10px;
    font-size: 0.6cm;
}

.get-in-touch svg{
    height: 30px;
}

footer{ 
    background-color: #2B104E;
    padding: 20px;
    margin: 0;
    height: 100px;
    bottom: 0px;
    text-align: center;
    justify-content: center;
}

.social-icons{ 
    justify-items: center; 
    margin-left: -20px;
}
.social-icons ul li{
    text-decoration: none;
    list-style-type: none;
    display: inline;
    float: left;
    padding-right: 5px;
}
.social-icons a{
    text-decoration: none;
    color: white;

}

.social-icons a img{
    height: 20px;

}

.copyright{
    text-align: center;
    color: rgb(113, 119, 121);
    
}
.clear{
    clear: both; 
    position: fixed;
}


@media (max-width: 826px) { 
    .nav-links{
        gap: 0px;
    }
    
    header {
        height: 400px;
         background-size: cover; /* Makes the image cover the entire element */
  
    } 
 
}


@media (max-width: 768px) {
    /* CSS rules for smaller screens */
    
    header {
        height: 350px; 
    } 
    .top-bar{ 
        background-color:#2B104E;
    }
    
    
    .logo a {
        color: white; 
    }
 
    .nav-links {
        display: none;
        flex-direction: column;
        flex: auto;
        position: absolute;
        top: 50px;
        padding-inline-start: 0%; 
        padding-top: 20px;
        left: 0; 
        width: 100%; 
        background-color: #2B104E;
        border-top: 1px solid #F0F0F0; 
        text-align: center;
 
    }
  

    .nav-links li {
        padding: 20px;
        cursor: pointer;
    }

    .nav-links li:hover {
       background-color:#1A1A3C; 
    }
    .toggle-button {
        display: flex;
        /* float:left; 
        display: block; */
    }

    /* .top-bar ul {
        display: none;
    } */
 

    .nav-links.active {
        display: flex;
    }

    .about img{
        border-radius: 30px;
        height: 200px ; 
    
    }
    .social-icons{ 
        /* background-color: red; */
        width: auto  ;  
        padding: 0px;
        /* display: inline-block; */
        justify-items: center;

    }
    
   
    
}

@media (max-width:500px) {
    header {
        height: 300px; 
    }
}

@media (max-width:350px) {
    header {
        height: 300px; 
    }

    
    .logo a { 
        font-weight: bold;
        font-size: 1.5em; 

    }

    .toggle-button {   
        padding: 15px;
    
    }
     
    .bar {
        width: 20px;
        height: 2px; 
        margin: 3px 0;
    }
    

    .top-title{ 
        padding: 50px; 
        padding-top: 100px;   
    }
}

